Fix footer spacing (root)

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ ul {
   padding: 0;
 }
 
-li {
+main li {
   margin-bottom: 1em;
 }
 
